Using localStoarage for saving the code when refresh

--- a/Editor.html
+++ b/Editor.html
@@ -8,7 +8,7 @@
     <!-- Css link -->
     <link rel="stylesheet" href="Editor.css">
     <!-- Image logo link -->
-    <link rel="web icon" type="image/png" href="assets/Logo.png">
+    <link rel="web icon" type="image/png" href="assets/WebLogo.png">
 </head>
 <body>
     <!-- Editor Div -->
@@ -16,7 +16,7 @@
     <div id="editorDiv">
         <div id="htmlDiv">
         <label><img src="assets/html.png" alt="html"> html</label>
-        <textarea name="htmlCode" id="htmlCode" onkeyup="CodeEditor()" value = ''></textarea>
+        <textarea name="htmlCode" id="htmlCode" onkeyup="CodeEditor()"></textarea>
         </div>
         <br>
 
@@ -34,7 +34,7 @@
         <br>
 
         <div id="OutputDiv">
-        <label id="outputLabel"><img src="assets/play.png" alt="html"> Output</label>
+        <label id="outputLabel"><img src="assets/play.png" id="playbtn" alt="html"> Output</label>
         <iframe id="Output"></iframe>
         </div>
     </div>
